--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,9 +17,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
+    "react-redux": "^8.0.5",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "stream": "0.0.2",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
